# Crabapple

./: .gitignore  .gitmodules  Cargo.toml  DragonMake  README.md  build.sh
.github/workflows/: actions.yml
armwrap/: Makefile  Tweak.x  control
res/: arm64patcher
src/crabapple/: Cargo.toml  build.rs  ffi.rs  lib.rs  objc.rs  util.rs
src/crabapple-example/: Cargo.toml  lib.rs
src/crabapple/hooking/: libhooker.rs  mod.rs  substrate.rs
src/crabapple/logging/: mod.rs  oslog.rs  remote.rs
