[package]
name = "crabapple-example"
version = "0.1.0"
authors = ["aspen <luxx4x@protonmail.com>"]
edition = "2018"
license = "Zlib"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
crabapple = { path = "../crabapple", features = ["remotelog"] }

[features]
arm64e = ["crabapple/arm64e"]
