[package]
name = "crabapple"
version = "0.1.0"
authors = ["aspen <luxx4x@protonmail.com>", "kritanta"]
edition = "2018"
license = "Zlib"

[lib]
path = "lib.rs"

[dependencies]
objc = "0.2"
objc-foundation = "0.1"
c_string = "0.7"
paste = "0.1"
anyhow = "1.0"
lazy_static = { version = "1.4", optional = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
rusty-hook = "^0.11.1"

[features]
arm64e = []
remotelog = ["lazy_static"]
